# learn

./: README.md
alg/lesson_10/: main.c
alg/lesson_3/: main.c
alg/lesson_4/: main.c
alg/lesson_6/: main.c
alg/lesson_7/: main.c
alg/lesson_9/: main.c
cpp_hard/lesson_1/: main.cpp
cpp_hard/lesson_2/: main.cpp
cpp_hard/lesson_3/: main.cpp
cpp_hard/lesson_4/: main.cpp
cpp_hard/lesson_5/: main.cpp
cpp_hard/lesson_6/: main.cpp
cpp_hard/lesson_7/: CMakeLists.txt  main.cpp  test.proto
cpp_hard/lesson_8/urok8/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  main.cpp  urok8.pro
cpp_hard/lesson_8/urok8/include/: classes.h
cpp_hard/lesson_8/urok8/src/: classes.cpp
cpp_hard/lesson_8/urok8/tests/: Makefile  Makefile.Debug  Makefile.Release
cpp_osn/lesson_1/: less_1  less_1.ii  less_1.s  less_1_change
cpp_osn/lesson_2/: main.cpp
cpp_osn/lesson_3/: main.cpp  test.h
cpp_osn/lesson_4/: main.cpp
cpp_osn/lesson_5/: main.cpp
cpp_osn/lesson_5/zadanie_6/: checkbalance.h  initial.h  invert.h  invert2.h  main.cpp  shiftarray.h
cpp_osn/lesson_6/: main.cpp
networks/lesson_1/: udp_client.cpp  udp_client_win_no_wrapper.cpp  udp_server.cpp  udp_server_win_no_wrapper.cpp
oop/lesson_1/: main.cpp
oop/lesson_2/: main.cpp
oop/lesson_3/: main.cpp
oop/lesson_4/: array.h  main.cpp
oop/lesson_5/: BlackJack.cpp  main.cpp
oop/lesson_6/: BlackJack.cpp  main.cpp
oop/lesson_7/: BlackJack.cpp  main.cpp
oop/lesson_8/: main.cpp
patterns/lesson_1/: main_proxy.cpp  main_singleton.cpp
patterns/lesson_2/: main_abstract_factory.cpp  main_command.cpp  main_decorator.cpp
patterns/lesson_3/: main_adapter.cpp  main_iterator.cpp  main_strategy.cpp
patterns/lesson_4/: main_bridge.cpp  main_builder.cpp  main_factory_method.cpp
patterns/lesson_5/: main_facade.cpp  main_observer.cpp  main_visitor.cpp
patterns/lesson_6/: main_composite.cpp  main_mediator.cpp  main_template_method.cpp
patterns/lesson_7/: main_memento.cpp  main_pimpl.cpp
patterns/lesson_8/: main_prototype.cpp  main_state.cpp
qt/: README.md
qt/build-lesson_4_5-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  TextEdit_en_EN.qm  build.ninja  cmake_install.cmake  dz_4_1  qtcsettings.cmake  settings.json
qt/build-lesson_4_5-Desktop_Qt_6_2_4_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
qt/build-lesson_4_5-Desktop_Qt_6_2_4_GCC_64bit-Debug/dz_4_1_autogen/: deps  mocs_compilation.cpp
qt/build-lesson_4_5-Desktop_Qt_6_2_4_GCC_64bit-Debug/dz_4_1_autogen/6WJNPILU4A/: qrc_resources.cpp
qt/build-lesson_4_5-Desktop_Qt_6_2_4_GCC_64bit-Debug/dz_4_1_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_settings.cpp  moc_settings.cpp.d
qt/lesson_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/lesson_1/resource/: resources.qrc
qt/lesson_10/: CMakeLists.txt  MyWindow.qml  main.cpp  main.qml  task.cpp  task.h
qt/lesson_10/Tests/: CMakeLists.txt  testsQML.cpp  tst_MyWindow.qml  tst_basics.cpp
qt/lesson_11/: CMakeLists.txt  MyWindow.qml  main.cpp  main.qml  table.qml  task.cpp  task.h
qt/lesson_2/dz2_2/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
qt/lesson_2/dz2_3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/lesson_3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/lesson_3/resource/: help.txt  resources.qrc
qt/lesson_4_5/: CMakeLists.txt  CMakeLists.txt.user.cf892f7  mainwindow.cpp  mainwindow.h  mainwindow.ui  myjson.cpp  settings.cpp  settings.h  settings.json  settings.ui
qt/lesson_4_5/resource/: grey.qss  resources.qrc
qt/lesson_4_5/translations/: TextEdit_en_EN.ts  TextEdit_ru_RU.ts
qt/lesson_6/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  myjson.cpp  myjson.h  settings.cpp  settings.json  settings.ui
qt/lesson_6/resource/: help.txt
qt/lesson_6/translations/: TextEdit_en_EN.ts  TextEdit_ru_RU.ts
qt/lesson_7/1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/lesson_7/1/resource/: resources.qrc
qt/lesson_7/2_3/: itemeventfilter.cpp  itemeventfilter.h  mainwindow.cpp  mainwindow.h  myqgraphicsscene.cpp  myqgraphicsscene.h  star.cpp  star.h
qt/lesson_8/: CMakeLists.txt  finder.cpp  finder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myjson.cpp  mysubwindow.cpp  mysubwindow.h  settings.cpp  settings.h  settings.json  settings.ui
qt/lesson_8/resource/: resources.qrc
qt/lesson_8/translations/: TextEdit_en_EN.qm  TextEdit_en_EN.ts  TextEdit_ru_RU.ts
qt/lesson_9/: CMakeLists.txt  MyBut.qml  main.cpp  main.qml  task.cpp  task.h
qt/temp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qt/temp/resource/: resources.qrc
qt/temp2/: CMakeLists.txt  itemeventfilter.cpp  itemeventfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  myqgraphicsscene.cpp  myqgraphicsscene.h  star.cpp  star.h
qt/temp3/: CMakeLists.txt  itemeventfilter.cpp  mainwindow.cpp  mainwindow.h  myqgraphicsscene.cpp  myqgraphicsscene.h
qtquick/lesson_1/1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qtquick/lesson_1/2_3/: CMakeLists.txt  main.cpp  main.qml
qtquick/lesson_2/1/: main.qml
qtquick/lesson_2/2_3/: CMakeLists.txt  main.qml
qtquick/lesson_3/1_2/: CMakeLists.txt  main.cpp  main.qml
qtquick/lesson_3/3/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
ue5/lesson_2/: TankZ.uproject
ue5/lesson_2/Config/: DefaultEngine.ini  DefaultInput.ini
ue5/lesson_2/Content/: BP_TankPawn.uasset
ue5/lesson_3/: TankZ.uproject
ue5/lesson_3/Config/: DefaultGame.ini  DefaultInput.ini
ue5/lesson_3/Content/: BP_TankPawn.uasset  GM_TankPawn.uasset
ue5/lesson_3/Source/: TankZ.Target.cs  TankZEditor.Target.cs
ue5/lesson_3/Source/TankZ/: Cannon.h  (+8 more)
ue5/lesson_4/Content/: BP_TankPawn.uasset  BP_TestActor.uasset
ue5/lesson_5/Config/: DefaultInput.ini
ue5/lesson_5/Content/: BP_TankPawn.uasset  BP_TestActor.uasset
ue5/lesson_6/Config/: DefaultInput.ini
ue5/lesson_6/Content/: BP_TankPawn.uasset  BP_TestActor.uasset
ue5/lesson_7/Content/: BP_TankPawn.uasset
ue5/lesson_8/Content/: BP_TankPawn.uasset  BP_TestActor.uasset
(+222 files in other folders)
